@@ -1,3 +1,14 @@
+2003-01-15  Roland Mas  <mas@echo.fr>
+
+	* common/include/Plugin.class: PHPdoc.
+
+	* common/include/PluginManager.class: ditto.  Also, moved code to
+	pre.php.
+
+	* www/include/pre.php: Added code from PluginManager.class.
+
+	* db/20021214.sql: Added plugin subsystem tables and sequences.
+
 2003-01-14  Roland Mas  <lolando@debian.org>
 
 	* www/include/Layout.class: Split subMenu() into BeginSubMenu(),
